--- a/frontend/src/pages/Filme/css/filme.css
+++ b/frontend/src/pages/Filme/css/filme.css
@@ -1,17 +1,18 @@
 
-.formCreate {
+.formCreate, .formEdit {
     display: flex;
     justify-content: center;
     flex-direction: column;
     text-align: center;
+    margin-bottom: 2em;
 }
 
-.formCreate h1 {
+.formCreate h1, .formEdit h1 {
     margin: .3em 0;
 }
 
 .form {
-    margin: 2em 10em;
+    /* margin: 2em 10em; */
 }
 
 .form div {
@@ -19,12 +20,25 @@
     flex-direction: column;
     justify-content: center;
     margin-top: 1em;
-    padding: 0 10em;
+    padding: 0 20vw;
 }
 
 .form label {
     font-weight: bold;
     display: flex;
+    font-size: 16pt;
+}
+
+.field input[type='text'], 
+.field input[type='text']:focus,
+.field textarea,
+.field textarea:focus {
+    margin-top: .5em;
+    font-size: large;
+    border: none;
+    border-bottom: 1px solid #b90303;
+    color: #000;
+    outline: 0;
 }
 
 .form span {
@@ -35,8 +49,8 @@
     margin-top: 2em;
 }
 
-.btn button {
-    padding: .5em;
+.btnSubmit button {
+    padding: 1em;
     border: 1px solid #b90303;
     background-color: #b90303;
     font-weight: bold;
@@ -44,10 +58,26 @@
     transition: .5s;
 }
 
-.btn button:hover {
+.btnSubmit button:hover {
     border: 1px solid #FF0000;
     background-color: #FF0000;
     font-weight: bold;
     color: #FFF;
     cursor: pointer;
 }
+
+.containerError {
+    margin-top: 5em;
+    font-size: 14pt;;
+}
+
+.containerError a {
+    text-decoration: none;
+}
+
+.btnVoltar {
+    margin-top: 1em;
+    color: #b90303;
+}
+
+
