--- a/frontend/src/pages/Filme/css/detailImg.css
+++ b/frontend/src/pages/Filme/css/detailImg.css
@@ -17,9 +17,15 @@
 .detailImage {
     display: flex;
     justify-content: center;
-    height: 300px;
+    max-height: 300px;
     overflow: hidden;
-    width: 250px;
+    max-width: 250px;
+    padding: 0 2em;
+}
+
+.detailImage img {
+    max-width: 100%;
+    object-fit: cover;
 }
 
 .detailInfo {
@@ -48,7 +54,12 @@
 
 .iconsDetail {
     display: flex;
-    justify-content: flex-start;
+    justify-content: space-between;
+}
+
+.IconStar {
+    display: flex;
+    align-items: flex-end;
 }
 
 .editDetail, .removeDetail {
