--- a/frontend/src/components/Card/css/card.css
+++ b/frontend/src/components/Card/css/card.css
@@ -17,19 +17,21 @@
     opacity: 0.7;
     height: 100%;
     width: 100%;
+    object-fit: cover;
 }
 
 .cardBody {
     display: flex;
-    position: absolute;
+    /* position: absolute; */
     width: 100%;
+    height: 100vh;
     top: 240px;
     align-items: end;
 }
 
 .cardBodyContent {
     position: absolute;
-    top: 0;
+    bottom: 0;
     height: 50px;
     padding: .5em 0;
     display: flex;
